{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 377,
  "lineage": "22b741c1-9d7d-a465-43c9-5ca21dd064a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:internet-gateway/igw-020bc35a3d003dac8",
            "id": "igw-020bc35a3d003dac8",
            "owner_id": "851077919242",
            "vpc_id": "vpc-081a0ffb3feebb270"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:loadbalancer/app/aws-alb/76470f1a3b98c9fc",
            "arn_suffix": "app/aws-alb/76470f1a3b98c9fc",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aws-alb-314826193.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:loadbalancer/app/aws-alb/76470f1a3b98c9fc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0428e868cfa131284"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09f007d5fd12af83d"
              },
              {
                "subnet_id": "subnet-0c96e5f90c68b2fb4"
              }
            ],
            "subnets": [
              "subnet-09f007d5fd12af83d",
              "subnet-0c96e5f90c68b2fb4"
            ],
            "vpc_id": "vpc-081a0ffb3feebb270",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.tf-lb-sg",
            "aws_subnet.tf-subnet",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-0759f6d6987041ed2",
            "id": "rtb-0759f6d6987041ed2",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020bc35a3d003dac8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081a0ffb3feebb270"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e33ffc595847c34",
            "route_table_id": "rtb-0759f6d6987041ed2",
            "subnet_id": "subnet-09f007d5fd12af83d"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.public",
            "aws_subnet.tf-subnet",
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0664ad1810fab0e4e",
            "route_table_id": "rtb-0759f6d6987041ed2",
            "subnet_id": "subnet-0c96e5f90c68b2fb4"
          },
          "dependencies": [
            "aws_internet_gateway.tf-igw",
            "aws_route_table.public",
            "aws_subnet.tf-subnet",
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-0428e868cfa131284",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0428e868cfa131284",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-lb-sg",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081a0ffb3feebb270"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-09f007d5fd12af83d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f007d5fd12af83d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0"
            },
            "tags_all": {
              "Name": "public_subnet_0"
            },
            "vpc_id": "vpc-081a0ffb3feebb270"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0c96e5f90c68b2fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c96e5f90c68b2fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-081a0ffb3feebb270"
          },
          "dependencies": [
            "aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:vpc/vpc-081a0ffb3feebb270",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065cd80d61563dac7",
            "default_route_table_id": "rtb-0ac0927eba1a37ade",
            "default_security_group_id": "sg-0bcb27e21cf310319",
            "dhcp_options_id": "dopt-06b676052885e79d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081a0ffb3feebb270",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac0927eba1a37ade",
            "owner_id": "851077919242"
          }
        }
      ]
    },
    {
      "module": "module.deploy_test",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086cae3329a3f7d75",
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:instance/i-0ee917ae7324c0e8e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "whs_ec2_role_iac",
            "id": "i-0ee917ae7324c0e8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "whs-iac-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02a51dd6dd58f88b1",
            "private_dns": "ip-10-0-101-200.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.200",
            "public_dns": "ec2-3-35-138-169.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.138.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d01ca96d96ae147a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b3f251c461056a8",
            "tags": {
              "Environment": "dev",
              "Name": "deployByIac",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "deployByIac",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b82bab48cbba1288"
            ]
          },
          "dependencies": [
            "module.deploy_test.aws_iam_instance_profile.whs_ec2_role_iac",
            "module.deploy_test.aws_iam_role.whs_ec2_role_iac",
            "module.deploy_test.module.vote_service_sg.aws_security_group.this",
            "module.deploy_test.module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.owasp-zap",
      "mode": "data",
      "type": "aws_instance",
      "name": "zap_instance_id",
      "provider": "module.deploy_test.module.owasp-zap.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-05e02e6210658716f",
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:instance/i-02aec09c98b3f9aa2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "zap-terraform-service-role",
            "id": "i-02aec09c98b3f9aa2",
            "instance_id": "i-02aec09c98b3f9aa2",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "key_name": "wasp-zap",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0b981431f17c10179",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-111-114.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.111.114",
            "public_dns": "ec2-15-165-16-198.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.16.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ebe277e9ec975d40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d094aefdcb4e0a32",
            "tags": {
              "Name": "ZapTestInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ed89c48ad8a95a3"
            ]
          }
        }
      ]
    },
    {
      "module": "module.deploy_test.module.owasp-zap",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "module.deploy_test.module.owasp-zap.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025cc62237dec229e",
            "association_id": "eipassoc-0daf6d1aa727bb5a8",
            "domain": "vpc",
            "id": "eipalloc-025cc62237dec229e",
            "instance": "i-02aec09c98b3f9aa2",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0b981431f17c10179",
            "private_dns": "ip-10-0-111-114.ap-northeast-2.compute.internal",
            "private_ip": "10.0.111.114",
            "public_dns": "ec2-15-165-16-198.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.16.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.deploy_test.module.owasp-zap.aws_iam_instance_profile.zap_instance_profile",
            "module.deploy_test.module.owasp-zap.aws_iam_role.service_role",
            "module.deploy_test.module.owasp-zap.aws_instance.zap_instance",
            "module.deploy_test.module.owasp-zap.aws_security_group.zap_sg",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.owasp-zap",
      "mode": "managed",
      "type": "aws_instance",
      "name": "zap_instance",
      "provider": "module.deploy_test.module.owasp-zap.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e02e6210658716f",
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:instance/i-02aec09c98b3f9aa2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "zap-terraform-service-role",
            "id": "i-02aec09c98b3f9aa2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "wasp-zap",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b981431f17c10179",
            "private_dns": "ip-10-0-111-114.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.111.114",
            "public_dns": "ec2-15-165-16-198.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.16.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ebe277e9ec975d40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d094aefdcb4e0a32",
            "tags": {
              "Name": "ZapTestInstance"
            },
            "tags_all": {
              "Name": "ZapTestInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ed89c48ad8a95a3"
            ]
          },
          "dependencies": [
            "module.deploy_test.module.owasp-zap.aws_iam_instance_profile.zap_instance_profile",
            "module.deploy_test.module.owasp-zap.aws_iam_role.service_role",
            "module.deploy_test.module.owasp-zap.aws_security_group.zap_sg",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.owasp-zap",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zap_sg",
      "provider": "module.deploy_test.module.owasp-zap.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-05ed89c48ad8a95a3",
            "description": "ZAP security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ed89c48ad8a95a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZAP CLI",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240106082618268200000006",
            "name_prefix": "terraform-",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zap_sg_group"
            },
            "tags_all": {
              "Name": "zap_sg_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_eip",
      "name": "sonarqube_eip",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0572a2a5e9155f104",
            "association_id": "eipassoc-050d61aced665f695",
            "domain": "vpc",
            "id": "eipalloc-0572a2a5e9155f104",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0adcef562852163e2",
            "private_dns": "ip-10-0-14-148.ap-northeast-2.compute.internal",
            "private_ip": "10.0.14.148",
            "public_dns": "ec2-43-202-223-19.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.223.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sonarqube_igw",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:internet-gateway/igw-0c3af5237553df19f",
            "id": "igw-0c3af5237553df19f",
            "owner_id": "851077919242",
            "tags": {
              "Name": "sonarqube_igw"
            },
            "tags_all": {
              "Name": "sonarqube_igw"
            },
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sonarqube_lb",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:loadbalancer/app/sonarqube-lb/9760b4b95acc6ed3",
            "arn_suffix": "app/sonarqube-lb/9760b4b95acc6ed3",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sonarqube-lb-202888179.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:loadbalancer/app/sonarqube-lb/9760b4b95acc6ed3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sonarqube-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0041ea53878240712"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ad422e4665050a7"
              },
              {
                "subnet_id": "subnet-0b87b16cf989264e6"
              },
              {
                "subnet_id": "subnet-0bad9daf33e05de16"
              }
            ],
            "subnets": [
              "subnet-06ad422e4665050a7",
              "subnet-0b87b16cf989264e6",
              "subnet-0bad9daf33e05de16"
            ],
            "tags": {
              "Environment": "sonarqube"
            },
            "tags_all": {
              "Environment": "sonarqube"
            },
            "vpc_id": "vpc-0c25cc2f5b738534d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_security_group.sonarqube_lb",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2b",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2c",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "sonarqube_listener",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:listener/app/sonarqube-lb/9760b4b95acc6ed3/41fa94d46e59cae0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:targetgroup/sonarqube-tg/3b5a4753d2563399",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:listener/app/sonarqube-lb/9760b4b95acc6ed3/41fa94d46e59cae0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:loadbalancer/app/sonarqube-lb/9760b4b95acc6ed3",
            "mutual_authentication": [],
            "port": 9000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_lb.sonarqube_lb",
            "module.deploy_test.module.sonarQube.aws_lb_target_group.sonarqube",
            "module.deploy_test.module.sonarQube.aws_security_group.sonarqube_lb",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2b",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2c",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sonarqube",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:targetgroup/sonarqube-tg/3b5a4753d2563399",
            "arn_suffix": "targetgroup/sonarqube-tg/3b5a4753d2563399",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:851077919242:targetgroup/sonarqube-tg/3b5a4753d2563399",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sonarqube-tg",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sonarqube_nat",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0572a2a5e9155f104",
            "association_id": "eipassoc-050d61aced665f695",
            "connectivity_type": "public",
            "id": "nat-0ff6bffbdf9129b6f",
            "network_interface_id": "eni-0adcef562852163e2",
            "private_ip": "10.0.14.148",
            "public_ip": "43.202.223.19",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b87b16cf989264e6",
            "tags": {
              "Name": "sonarqube_nat"
            },
            "tags_all": {
              "Name": "sonarqube_nat"
            }
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_eip.sonarqube_eip",
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonarqube_private_route_table_a",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-04c1a6f2a443102eb",
            "id": "rtb-04c1a6f2a443102eb",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff6bffbdf9129b6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube_private_route_table_a"
            },
            "tags_all": {
              "Name": "sonarqube_private_route_table_a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_eip.sonarqube_eip",
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonarqube_private_route_table_b",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-01424feca962c9cb2",
            "id": "rtb-01424feca962c9cb2",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff6bffbdf9129b6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube_private_route_table_b"
            },
            "tags_all": {
              "Name": "sonarqube_private_route_table_b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_eip.sonarqube_eip",
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonarqube_private_route_table_c",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-04b2bce4e4fe4acd7",
            "id": "rtb-04b2bce4e4fe4acd7",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff6bffbdf9129b6f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube_private_route_table_c"
            },
            "tags_all": {
              "Name": "sonarqube_private_route_table_c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_eip.sonarqube_eip",
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonarqube_route_table",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-06fe2ee01ec45517e",
            "id": "rtb-06fe2ee01ec45517e",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3af5237553df19f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube_route_table"
            },
            "tags_all": {
              "Name": "sonarqube_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bee886e8c77d3fcd",
            "route_table_id": "rtb-06fe2ee01ec45517e",
            "subnet_id": "subnet-0b87b16cf989264e6"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_route_table",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a1",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f148b09bac8c4a74",
            "route_table_id": "rtb-04c1a6f2a443102eb",
            "subnet_id": "subnet-0ecd5c8859e0e926c"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_eip.sonarqube_eip",
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_private_route_table_a",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_private_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0572cd15d54aa883f",
            "route_table_id": "rtb-06fe2ee01ec45517e",
            "subnet_id": "subnet-06ad422e4665050a7"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_route_table",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2b",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b1",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f0fdbf983ce4b3e",
            "route_table_id": "rtb-01424feca962c9cb2",
            "subnet_id": "subnet-05fa6e807e962f566"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_eip.sonarqube_eip",
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_private_route_table_b",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_private_subnet_2b",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063b34b3e5f43a092",
            "route_table_id": "rtb-06fe2ee01ec45517e",
            "subnet_id": "subnet-0bad9daf33e05de16"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_route_table",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2c",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c1",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fce52cf1daec5fda",
            "route_table_id": "rtb-04b2bce4e4fe4acd7",
            "subnet_id": "subnet-014f3f8a084439bb9"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_eip.sonarqube_eip",
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_private_route_table_c",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_private_subnet_2c",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_db",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-04f6c982bbeba0e90",
            "description": "sonarqube db group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f6c982bbeba0e90",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "postgre sql",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f32de6f88a7d833"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sonarqube_db",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_db_group"
            },
            "tags_all": {
              "Name": "sonarqube_db_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_security_group.sonarqube_lb",
            "module.deploy_test.module.sonarQube.aws_security_group.sonarqube_sg",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_default",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-03ccc243c8c5daea7",
            "description": "sonarqube default group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ccc243c8c5daea7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "default",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02f32de6f88a7d833"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "sonarqube_default",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_default_group"
            },
            "tags_all": {
              "Name": "sonarqube_default_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_security_group.sonarqube_lb",
            "module.deploy_test.module.sonarQube.aws_security_group.sonarqube_sg",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_lb",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-0041ea53878240712",
            "description": "sonarqube loadbalancer group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0041ea53878240712",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " ",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube_lb",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_lb_group"
            },
            "tags_all": {
              "Name": "sonarqube_lb_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-02f32de6f88a7d833",
            "description": "sonarqube security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "id": "sg-02f32de6f88a7d833",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0041ea53878240712"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube_sg",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube_sg_group"
            },
            "tags_all": {
              "Name": "sonarqube_sg_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_security_group.sonarqube_lb",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_private_subnet_2a",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0ecd5c8859e0e926c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecd5c8859e0e926c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_private_subnet_2a"
            },
            "tags_all": {
              "Name": "sonarqube_private_subnet_2a"
            },
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_private_subnet_2b",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-05fa6e807e962f566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fa6e807e962f566",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_private_subnet_2b"
            },
            "tags_all": {
              "Name": "sonarqube_private_subnet_2b"
            },
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_private_subnet_2c",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-014f3f8a084439bb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014f3f8a084439bb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_private_subnet_2c"
            },
            "tags_all": {
              "Name": "sonarqube_private_subnet_2c"
            },
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_public_subnet_2a",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0b87b16cf989264e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b87b16cf989264e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_public_subnet_2a"
            },
            "tags_all": {
              "Name": "sonarqube_public_subnet_2a"
            },
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_public_subnet_2b",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-06ad422e4665050a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ad422e4665050a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_public_subnet_2b"
            },
            "tags_all": {
              "Name": "sonarqube_public_subnet_2b"
            },
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonarqube_public_subnet_2c",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0bad9daf33e05de16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bad9daf33e05de16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sonarqube_public_subnet_2c"
            },
            "tags_all": {
              "Name": "sonarqube_public_subnet_2c"
            },
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sonarqube_vpc",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:vpc/vpc-0c25cc2f5b738534d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0012d631bfdd0f808",
            "default_route_table_id": "rtb-084ad9e743c7e3278",
            "default_security_group_id": "sg-0c06f91a2efaf9a98",
            "dhcp_options_id": "dopt-06b676052885e79d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c25cc2f5b738534d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084ad9e743c7e3278",
            "owner_id": "851077919242",
            "tags": {
              "Name": "sonarqube-vpc"
            },
            "tags_all": {
              "Name": "sonarqube-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.deploy_test.module.sonarQube",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.deploy_test.module.sonarQube.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:vpc-endpoint/vpce-0cd9888168fac45a2",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-0cd9888168fac45a2",
            "owner_id": "851077919242",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01424feca962c9cb2",
              "rtb-04b2bce4e4fe4acd7",
              "rtb-04c1a6f2a443102eb"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c25cc2f5b738534d"
          },
          "dependencies": [
            "module.deploy_test.module.sonarQube.aws_eip.sonarqube_eip",
            "module.deploy_test.module.sonarQube.aws_internet_gateway.sonarqube_igw",
            "module.deploy_test.module.sonarQube.aws_nat_gateway.sonarqube_nat",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_private_route_table_a",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_private_route_table_b",
            "module.deploy_test.module.sonarQube.aws_route_table.sonarqube_private_route_table_c",
            "module.deploy_test.module.sonarQube.aws_subnet.sonarqube_public_subnet_2a",
            "module.deploy_test.module.sonarQube.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-0b82bab48cbba1288",
            "description": "Web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b82bab48cbba1288",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "whs-sg",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "whs-sg"
            },
            "tags_all": {
              "Name": "whs-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.deploy_test.module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "all",
            "from_port": 0,
            "id": "sgrule-1775240422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b82bab48cbba1288",
            "security_group_rule_id": "sgr-011ed63a2f801a4fc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vote_service_sg.aws_security_group.this",
            "module.deploy_test.module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vote_service_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https",
            "from_port": 443,
            "id": "sgrule-1811701616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b82bab48cbba1288",
            "security_group_rule_id": "sgr-0b927c6f1780160fc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vote_service_sg.aws_security_group.this",
            "module.deploy_test.module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 80,
            "id": "sgrule-869317155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b82bab48cbba1288",
            "security_group_rule_id": "sgr-0e11c9740f4faed7c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vote_service_sg.aws_security_group.this",
            "module.deploy_test.module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-2057640040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b82bab48cbba1288",
            "security_group_rule_id": "sgr-05983f30a54350e56",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vote_service_sg.aws_security_group.this",
            "module.deploy_test.module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 8080,
            "id": "sgrule-140708851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b82bab48cbba1288",
            "security_group_rule_id": "sgr-025c8c0ec8ecf0d57",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vote_service_sg.aws_security_group.this",
            "module.deploy_test.module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 9090,
            "id": "sgrule-249456160",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b82bab48cbba1288",
            "security_group_rule_id": "sgr-07f257fec453cfdc7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9090,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vote_service_sg.aws_security_group.this",
            "module.deploy_test.module.vote_service_sg.aws_security_group.this_name_prefix",
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:network-acl/acl-0a43feadee22d3809",
            "default_network_acl_id": "acl-0a43feadee22d3809",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a43feadee22d3809",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851077919242",
            "subnet_ids": [
              "subnet-00b3f251c461056a8",
              "subnet-0d094aefdcb4e0a32",
              "subnet-0e12e3aa9f3592a36",
              "subnet-0efeedffe91fb9341"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-07e009b9aba564cce",
            "default_route_table_id": "rtb-07e009b9aba564cce",
            "id": "rtb-07e009b9aba564cce",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:security-group/sg-0e68ccda8936799b2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e68ccda8936799b2",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "851077919242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e084d60ca0bb6d6",
            "association_id": "eipassoc-0130f1ad49a449597",
            "domain": "vpc",
            "id": "eipalloc-07e084d60ca0bb6d6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-082f9451a408abacf",
            "private_dns": "ip-10-0-101-138.ap-northeast-2.compute.internal",
            "private_ip": "10.0.101.138",
            "public_dns": "ec2-43-201-137-100.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.137.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_internet_gateway.this",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076ed82060f271c16",
            "association_id": "eipassoc-0f2d5bca995fc38cb",
            "domain": "vpc",
            "id": "eipalloc-076ed82060f271c16",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0fc50899671b70f33",
            "private_dns": "ip-10-0-111-150.ap-northeast-2.compute.internal",
            "private_ip": "10.0.111.150",
            "public_dns": "ec2-43-203-69-114.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.69.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_internet_gateway.this",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:internet-gateway/igw-018470265236717ef",
            "id": "igw-018470265236717ef",
            "owner_id": "851077919242",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e084d60ca0bb6d6",
            "association_id": "eipassoc-0130f1ad49a449597",
            "connectivity_type": "public",
            "id": "nat-0570228be2cb54742",
            "network_interface_id": "eni-082f9451a408abacf",
            "private_ip": "10.0.101.138",
            "public_ip": "43.201.137.100",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00b3f251c461056a8",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_eip.nat",
            "module.deploy_test.module.vpc.aws_internet_gateway.this",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076ed82060f271c16",
            "association_id": "eipassoc-0f2d5bca995fc38cb",
            "connectivity_type": "public",
            "id": "nat-083d2069eb273d936",
            "network_interface_id": "eni-0fc50899671b70f33",
            "private_ip": "10.0.111.150",
            "public_ip": "43.203.69.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d094aefdcb4e0a32",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-ap-northeast-2c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_eip.nat",
            "module.deploy_test.module.vpc.aws_internet_gateway.this",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-080e71371a3b589991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0570228be2cb54742",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080e71371a3b58999",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_eip.nat",
            "module.deploy_test.module.vpc.aws_internet_gateway.this",
            "module.deploy_test.module.vpc.aws_nat_gateway.this",
            "module.deploy_test.module.vpc.aws_route_table.private",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08070dc80b9cbffaa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-083d2069eb273d936",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08070dc80b9cbffaa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_eip.nat",
            "module.deploy_test.module.vpc.aws_internet_gateway.this",
            "module.deploy_test.module.vpc.aws_nat_gateway.this",
            "module.deploy_test.module.vpc.aws_route_table.private",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-018470265236717ef",
            "id": "r-rtb-059be664d0d41ee9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-059be664d0d41ee9f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_internet_gateway.this",
            "module.deploy_test.module.vpc.aws_route_table.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-080e71371a3b58999",
            "id": "rtb-080e71371a3b58999",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0570228be2cb54742",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-08070dc80b9cbffaa",
            "id": "rtb-08070dc80b9cbffaa",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083d2069eb273d936",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:route-table/rtb-059be664d0d41ee9f",
            "id": "rtb-059be664d0d41ee9f",
            "owner_id": "851077919242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018470265236717ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05edf13e779c44fa9",
            "route_table_id": "rtb-080e71371a3b58999",
            "subnet_id": "subnet-0efeedffe91fb9341"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_route_table.private",
            "module.deploy_test.module.vpc.aws_subnet.private",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098f3adfa8d42ef0f",
            "route_table_id": "rtb-08070dc80b9cbffaa",
            "subnet_id": "subnet-0e12e3aa9f3592a36"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_route_table.private",
            "module.deploy_test.module.vpc.aws_subnet.private",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ae18a30a404bdcc",
            "route_table_id": "rtb-059be664d0d41ee9f",
            "subnet_id": "subnet-00b3f251c461056a8"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_route_table.public",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0937cc3b9634542e5",
            "route_table_id": "rtb-059be664d0d41ee9f",
            "subnet_id": "subnet-0d094aefdcb4e0a32"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_route_table.public",
            "module.deploy_test.module.vpc.aws_subnet.public",
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0efeedffe91fb9341",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efeedffe91fb9341",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0e12e3aa9f3592a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e12e3aa9f3592a36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-private-ap-northeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-00b3f251c461056a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b3f251c461056a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-public-ap-northeast-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-public-ap-northeast-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:subnet/subnet-0d094aefdcb4e0a32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d094aefdcb4e0a32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851077919242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc-public-ap-northeast-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc-public-ap-northeast-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a45a0fd44de3b60c"
          },
          "dependencies": [
            "module.deploy_test.module.vpc.aws_vpc.this",
            "module.deploy_test.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_test.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.deploy_test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:851077919242:vpc/vpc-0a45a0fd44de3b60c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a43feadee22d3809",
            "default_route_table_id": "rtb-07e009b9aba564cce",
            "default_security_group_id": "sg-0e68ccda8936799b2",
            "dhcp_options_id": "dopt-06b676052885e79d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a45a0fd44de3b60c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e009b9aba564cce",
            "owner_id": "851077919242",
            "tags": {
              "Environment": "dev",
              "Name": "whs-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whs-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}